[gd_scene load_steps=2 format=3 uid="uid://bd6v36ui8wl8r"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_d1tie"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_d1tie")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.141176, 0.141176, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 51
text = "Cave Maze"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
